fixed the grid gap

--- a/src/sass/components/_projects-grid.scss
+++ b/src/sass/components/_projects-grid.scss
@@ -4,12 +4,14 @@
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2%;
+  grid-gap: 2rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
+  padding-bottom: 1.5em;
 
   @include mq(medium) {
     grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 1rem;
   }
 }
 
